...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Afs-EB-N6G">
                                <rect key="frame" x="74" y="220" width="227" height="30"/>
                                <constraints>
...
                                </connections>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="E32-A1-eYP">
                                <rect key="frame" x="74" y="273" width="227" height="30"/>
                                <constraints>
...
                                <segments>
                                    <segment title="Login"/>
                                    <segment title="Sign Up"/>
                                </segments>
                                <color key="tintColor" white="0.25915178571428571" alpha="1" colorSpace="calibratedWhite"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dKR-gP-pNF">
                                <rect key="frame" x="164" y="361" width="49" height="30"/>
                                <state key="normal" title="Submit">
                                    <color key="titleColor" white="0.25915178570000003" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                        <outlet property="forgotPasswordButton" destination="tT8-cW-JiQ" id="WnY-eL-6UP"/>
                        <outlet property="passwordTextField" destination="E32-A1-eYP" id="p5E-E0-oTe"/>
                        <outlet property="sanity" destination="bLW-aa-n4o" id="Bza-fV-qyx"/>
                        <outlet property="segmentControl" destination="HWy-YL-DWb" id="egR-jn-1YX"/>
                        <outlet property="submitButton" destination="dKR-gP-pNF" id="iFu-sB-ctI"/>
...
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Budgets" id="WFS-eb-Anx">
                        <leftBarButtonItems>
                            <barButtonItem title="Logout" id="kuH-1k-X0z">
                                <connections>
                                    <action selector="logoutButtonPress:" destination="BYZ-38-t0r" id="s7O-rw-f0D"/>
...
                                                <rect key="frame" x="0.0" y="241" width="375" height="34"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                <state key="normal" title="update notification frequency"/>
                                                <connections>
                                                    <action selector="updateNotifications:" destination="Oh5-yo-wv8" eventType="touchUpInside" id="AQm-0d-cdS"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="unlessEditing" translatesAutoresizingMaskIntoConstraints="NO" id="f8s-Jb-Pc9">
                                                <rect key="frame" x="20" y="22" width="335" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="newPassword"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="Nry-Lq-lQa"/>
...
                                                <rect key="frame" x="118" y="53" width="139" height="33.5"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                <state key="normal" title="update password"/>
                                                <connections>
                                                    <action selector="updatePassword:" destination="Oh5-yo-wv8" eventType="touchUpInside" id="mfU-cp-Kdd"/>
...
